[JBAS-8642] fixing AS CR1 test suite regression